crates/rustynes-test-harness/tests/snapshots/external_coverage__vs_system_VS_Super_Mario_Bros.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=vs-system/VS Super Mario Bros.nes
rom_sha256=95a9c2b6d1456f5b460fdb3d1a2908e438afa4e493b9aaded21647e6e06735c0
frames=1141
fb_bytes=245760
cycles=33949784
audio_samples=836505
audio_fnv1a64=69875e9c6f2d7b66
checkpoint f900 fb_fnv1a64=ba3e37aa54503525
checkpoint f1100 fb_fnv1a64=ba3e37aa54503525
